# ajbot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  ajdb_design.erd.json  build.bat  compose.yml  compose_dbimage.yml  env_template.json  info.ini  pyproject.toml
.devcontainer/: devcontainer.json
.tasks/: build.bat  init_db_mock.bat  init_db_test.bat
documentation/: ajdb_design.erd.json  env_template.json
src/ajbot/: __init__.py  __main__.py  credentials.py  migrate.py
src/ajbot/_internal/: __init__.py  ajdb.py  ajdb_migrate.py  ajdb_support.py  ajdb_tables.py  ajmariadb.py  ajmongodb.py  bot.py  bot_config.py  bot_elements.py  bot_event.py  bot_in.py  bot_member.py  bot_out.py  config.py  exceptions.py  google_api.py  types.py
src/ajbot/_internal/ajdb/: __init__.py  association.py  disc.py  finance.py  lookup.py  support.py  tables.py
src/ajbot/_internal/ajdb/tables/: __init__.py  base.py  event.py  finance.py  lookup.py  member.py  member_private.py  membership.py  role.py  season.py
src/ajbot/_internal/bot/: __init__.py  asso_mgmt.py  checks.py  event.py  member.py  params.py  responses.py  role.py  season.py
src/ajbot/resources/: info.ini
src/mypydiscord/: __init__.py  __main__.py  bot.py  set_secret.py
src/mypydiscord/_internal/: __init__.py  config.py  google_api.py
src/mypydiscord/secret_resources/: __init__.py
tests/: .gitignore  approvaltests_config.json  debug_select.py  pytest.toml  support.py  test_direct_call.py  test_migrate.py  test_migrate.test_migrate.approved.txt  test_queries.py  test_queries.test_query_asso_roles.approved.txt  test_queries.test_query_events.approved.txt  test_queries.test_query_members.approved.txt  test_queries.test_query_seasons.approved.txt  test_queries.test_query_table_content.approved.txt  test_queries.test_query_table_content_with_options.approved.txt  testdb.py  testdiscord.py  testdrive.py  testgdrive.py  testmisc.py  xlsdb_LUP_saison.json
tests/_old_fashioned/: testdb.py  testdiscord.py
tests/db_mock/: ajdb-maria.env  db_mock.xlsx  env.json
tests/db_test/: ajdb-pma.env  compose.yml  db_test.xlsx  env.json  test.env
tests/results/: test_direct_call.test_direct_call.approved.txt  test_migrate.test_migrate.approved.txt  test_queries.test_add_update_event.approved.txt  test_queries.test_query_asso_roles.approved.txt  test_queries.test_query_events_per_season.approved.txt  test_queries.test_query_member_emails.approved.txt  test_queries.test_query_members_per_event_presence.approved.txt  test_queries.test_query_members_per_season_presence.approved.txt
