[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project.scripts]
aj_bot = 'ajbot.__main__:_main'
aj_creds = 'ajbot.credentials:_main'
aj_migrate = 'ajbot.migrate:_main'

[project]
name = 'ajbot'
dynamic = ['version']
dependencies = ['discord.py',
                'sqlalchemy[asyncio]', 'aiomysql',
                'vbrpytools',
                'humanize',
                'dateparser',
                'thefuzz[speedup]',
                'pwinput',
                'matplotlib==3.10.8',
               ]
description = 'Discord for personal use'
readme = 'README.md'
requires-python = '==3.13.11'
license = {file = 'LICENSE'}
keywords = ['tools', 'discord','personal', 'mariaDB', 'bot']
authors = [
  { name='Vincent Brettnacher', email='vincent.brettnacher@veoneer.com' },
]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.11',
    'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License'
]

[project.optional-dependencies]
dev = ["approvaltests", "pytest", "pytest-approvaltests", "pytest-asyncio", "pytest-cov"]

[project.urls]
Documentation = 'https://github.com/vbrett/ajbot/blob/master/README.md'
source = 'https://github.com/vbrett/ajbot'
Repository = 'https://github.com/vbrett/ajbot.git'
Issues = 'https://github.com/vbrett/ajbot/issues'

[tool.hatch.version]
path = 'src/ajbot/resources/info.ini'

[tool.hatch.build.targets.sdist]
exclude = ['/tests', '/.devcontainer', '*.json', 'build.bat', 'Dockerfile']

[dependency-groups]
dev = [
    "approvaltests>=16.3.0",
    "pytest>=9.0.2",
    "pytest-approvaltests>=0.2.4",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
